...

}

final class HomeViewController: BaseViewController, UISearchBarDelegate, UIGestureRecognizerDelegate {
    
    
    @IBOutlet weak var searchBar: UISearchBar!
    
    @IBOutlet weak var tableView: UITableView!
    
    @IBOutlet weak var buttonBottomConstraint: NSLayoutConstraint! 
    
    @IBOutlet weak var recentSearchLabel: UILabel!
    
    @IBOutlet weak var clearButton: UIButton!
    
    @IBOutlet weak var searchButton: UIButton!
    
    @IBAction func clearRecentSearch(_ sender: Any) {
...
