...
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="WordDetailViewController" customModule="MyDictionary" customModuleProvider="target">
            <connections>
                <outlet property="adjectiveFilterButton" destination="gOG-lw-WeR" id="FMp-KZ-vNS"/>
                <outlet property="adverbFilterButton" destination="BU9-xW-hKf" id="QUL-RG-qR1"/>
                <outlet property="cancelFilterButton" destination="tv6-M1-zPF" id="2gn-5E-AvC"/>
                <outlet property="nounFilterButton" destination="FNo-1g-2xe" id="dvz-hp-qed"/>
                <outlet property="phoneticLabel" destination="aGb-Gp-RPe" id="USk-ww-aM7"/>
                <outlet property="playAudioButton" destination="PIY-0X-2cO" id="baH-Ko-eQM"/>
                <outlet property="tableView" destination="lZJ-Pt-8uA" id="44y-bf-cbI"/>
                <outlet property="verbFilterButton" destination="L8d-3P-SGg" id="I5O-JM-PRu"/>
                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                <outlet property="wordTitleLabel" destination="Hyt-jz-FVb" id="jCd-6T-C9f"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
...
